--- a/Mongodb/.env
+++ b/Mongodb/.env
@@ -1,2 +1,3 @@
 PORT=3000
 MONGO_DB_CONNECTION=mongodb://127.0.0.1:27017/LoginSignup
+MONGODB_ATLES=mongodb+srv://safvankv:mongodbsafvan2023@cluster0.1oumrph.mongodb.net/LoginSchema?retryWrites=true&w=majority
